# comradarr

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  biome.json  docker-compose.yml  drizzle.config.ts  package.json  prek.toml  renovate.json  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.augment/rules/: backend-dev-pro.md  bun-svelte-pro.md  frontend-dev-pro.md  python-314-pro.md
.claude/: bun-svelte-pro.md  comradarr-plan.md
.github/workflows/: ci.yml  code-quality.yml  integration.yaml
.intent/: config.json
.kiro/steering/: product.md  structure.md  tech.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1d8a2c6dcc5d_phase4_oidc_subject.py  361c239a829d_v1_baseline_schema.py  a1b2c3d4e5f6_phase3_audit_action_extensions.py  b2c3d4e5f6a7_phase3_audit_admin_login.py
backend/src/comradarr/: __init__.py  __main__.py  app.py  config.py
backend/src/comradarr/api/controllers/: api_keys.py  auth.py  health.py
backend/src/comradarr/api/middleware/: auth.py  correlation.py  permission.py
backend/src/comradarr/cli/: __init__.py  migrate.py
backend/src/comradarr/core/: crypto.py  events.py  lifespan.py  logging.py  types.py
backend/src/comradarr/core/auth/: __init__.py  api_keys.py  local.py  oidc.py  protocol.py  rate_limit.py  registry.py  sentinel.py  sessions.py  trusted_header.py
backend/src/comradarr/db/: base.py  encrypted.py  enums.py  migrations.py
backend/src/comradarr/db/models/: __init__.py  api_key.py  api_key_scope.py  app_config.py  audit_log.py  auth_rate_limit.py  connector.py  mirror.py  notification.py  oidc_provider.py  planned_command.py  priority_search.py  role_permission.py  search_schedule.py  session.py  sync_state.py  user.py  user_preference.py
backend/src/comradarr/errors/: __init__.py  authentication.py  authorization.py  base.py  configuration.py  connector.py  crypto.py  handlers.py  internal.py  rate_limiting.py  validation.py
backend/src/comradarr/repositories/: __init__.py  _pagination.py  app_secrets.py  auth.py  base.py  connector.py  content.py
backend/src/comradarr/security/: secret_key.py
backend/src/comradarr/services/: __init__.py
backend/src/comradarr/services/audit/: __init__.py  vacuum.py  writer.py
backend/tests/: conftest.py  test_alembic_env.py  test_api_keys.py  test_api_keys_controller.py  test_app_boot.py  test_audit_retention_vacuum.py  test_audit_writer.py  test_auth_controller.py  test_auth_local.py  test_auth_middleware.py  test_auth_oidc.py  test_auth_protocol.py  test_auth_registry.py  test_auth_trusted_header.py  test_crypto.py  test_lifespan_phase4.py  test_logging.py  test_permission_check.py  test_phase4_observability.py  test_problem_details.py  test_rate_limit.py  test_secret.py  test_secret_typecheck.py  test_sessions.py  test_settings.py  test_user_repository.py
backend/tests/crypto/: conftest.py
backend/tests/db/: test_alembic_baseline.py  test_cursor_pagination.py  test_e2e_boot.py  test_encrypted_field.py  test_lifespan_migrations.py  test_migration_lock.py  test_models.py  test_partial_indexes.py  test_role_permissions.py  test_uuid_v7.py
backend/tests/integration/: test_phase4_auth_e2e.py
backend/tests/typecheck/: pyrightconfig.json  secret_misuse.py
dev-cli/: .gitignore  CLAUDE.md  README.md  pyproject.toml
dev-cli/tests/: __init__.py  test_config.py
dev_cli/: pyproject.toml
dev_cli/src/cr_dev/: __main__.py
dev_cli/src/cr_dev/commands/: db.py  dev.py  stop.py  test.py
dev_cli/src/cr_dev/core/: config.py  platform.py  process.py
dev_cli/src/cr_dev/tui/screens/: main_menu.py
dev_cli/src/cr_dev/tui/services/: __init__.py  command_runner.py  process_manager.py
dev_cli/src/cr_dev/tui/utils/: __init__.py
dev_cli/src/cr_dev/tui/widgets/: __init__.py
dev_cli/tests/: conftest.py  test_platform.py
docs/: comradarr-implementation-plan.md  comradarr-prd.md  prowlarr-api-docs.json  radarr-api-docs.json  sonarr-api-docs.json  whisparr-api-docs.json
docs/api-docs/: prowlarr-api-docs.json
docs/runbook/: auth-e2e.md  postgres-roles.md
drizzle/: 0000_initial.sql  20251129171247_lively_grey_gargoyle.sql  20251129175114_even_luckman.sql  20251130162006_peaceful_zuras.sql  20251130180925_icy_guardian.sql  20251130210401_lumpy_lila_cheney.sql  20251130223341_glorious_roughhouse.sql  20251201161125_cute_the_liberteens.sql  20251204153552_right_mephisto.sql  20251204161355_talented_natasha_romanoff.sql  20251204180925_marvelous_tombstone.sql  20251204211728_famous_emma_frost.sql  20251205072905_chemical_shard.sql  20251206005017_nosy_firebird.sql  20251206011701_left_madripoor.sql  20251206012630_lowly_tomas.sql  20260111212757_fat_cyclops.sql  20260125105853_spotty_blink.sql  20260125122531_smooth_cardiac.sql  20260131103540_initial.sql  20260131120422_damp_zarda.sql  20260131142138_amazing_grim_reaper.sql
drizzle/meta/: 0000_initial_snapshot.json  0000_snapshot.json  20251129171247_snapshot.json  20251129175114_snapshot.json  20251130162006_snapshot.json  20251130180925_snapshot.json  20251130210401_snapshot.json  20251130223341_snapshot.json  20251201161125_snapshot.json  20251204153552_snapshot.json  20251204161355_snapshot.json  20251204180925_snapshot.json  20251204211728_snapshot.json  20251205072905_snapshot.json  20251206005017_snapshot.json  20251206011701_snapshot.json  20251206012630_snapshot.json  20260111212757_snapshot.json  20260125105853_snapshot.json  20260125122531_snapshot.json  20260131103540_snapshot.json  20260131120422_snapshot.json  20260131142138_snapshot.json  _journal.json
frontend/: biome.json  bunfig.toml  package.json  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts
frontend/scripts/: gen-api.ts  openapi-url.ts
scripts/: create-admin.ts  generate-favicons.ts  stop-dev.sh  test-all.sh  test-db.sh  test-dev.sh
src/: app.css  app.d.ts  app.html  hooks.server.ts
static/: site.webmanifest
(+448 files in other folders)
