[project]
name = "comradarr"
version = "0.0.0"
description = "A media library completion service that integrates with *arr applications."
license = "AGPL-3.0-or-later"
authors = [
  { name = "engels74", email = "141435164+engels74@users.noreply.github.com" },
]
requires-python = ">=3.14,<3.15"
dependencies = [
  # Phase 1 runtime dependencies (plan §1 Step 10). httpx[http2] is intentionally
  # NOT listed here — Phase 7 owns its addition together with the first real
  # outbound client (Q6 / C6 final).
  "litestar[standard]>=2.19,<3",
  "granian[uvloop]>=2.7,<3",
  "msgspec>=0.20,<0.21",
  "sqlalchemy[asyncio]>=2.0.46,<2.1",
  "asyncpg>=0.30",
  "alembic>=1.18",
  "structlog>=25.5",
  # advanced-alchemy carries no upper pin per plan — track upstream stability.
  "advanced-alchemy",
]

[project.scripts]
# `uv run comradarr` (post-install) launches the canonical Granian process.
# A `migrate` script entry is intentionally deferred to Phase 2 — Phase 1 has
# no migrations, an unguarded entry would be a footgun (plan Step 8.4).
comradarr = "comradarr.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff",
  "basedpyright",
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  "pip-audit",
]

[tool.uv.build-backend]
module-name = "comradarr"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "UP", "B", "C4", "SIM", "RET", "TID", "TC",
  "FA", "ASYNC", "N", "PTH", "S",
]

[tool.ruff.lint.per-file-ignores]
# Tests use `assert` (S101) freely.
"tests/**" = ["S101"]
# Alembic env.py is import-by-side-effect; relax secret/credential heuristics.
"migrations/env.py" = ["S105", "S106"]
# PRD §21 fixes the exception class names (AuthenticationInvalidCredentials,
# ConnectorUnavailable, InternalUnexpected, …); the *-Error suffix N818
# convention does not apply to this canonical hierarchy.
"src/comradarr/errors/**" = ["N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.14"
# Phase 1 (F-4 burndown) flips `tests/` into the typecheck surface alongside `src/`.
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
