[project]
name = "cr-dev"
version = "1.0.0"
description = "Development tools for Comradarr - PostgreSQL management, test execution, and dev server lifecycle"
readme = "README.md"
authors = [
    { name = "engels74", email = "141435164+engels74@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.0",
    "textual>=0.50.0",
    "psycopg[binary]>=3.2.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "basedpyright>=1.18",
    "types-pyperclip>=1.9.0",
]

[project.scripts]
cr-dev = "cr_dev.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "S", "C4", "RUF"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"__init__.py" = ["F401"]
# CLI tool needs subprocess calls - ignore security warnings for known-safe patterns
"src/**" = ["S603", "S607", "S608", "S108"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.14"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "-q", "--strict-markers", "--import-mode=importlib"]
filterwarnings = [
    "error",
    # TestDbConfig is a config class for test databases, not a test class
    "ignore:cannot collect test class 'TestDbConfig':pytest.PytestCollectionWarning",
]
